--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     ],
     "require": {
         "php": "^7.2",
-        "laravel/framework": "~5.8|^6.0",
-        "spatie/eloquent-sortable": "^3.5"
+        "laravel/framework": "~5.8|^6.0|^7.0",
+        "spatie/eloquent-sortable": "^3.5|^3.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
