--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
     ],
     "require": {
         "php": "^7.2",
-        "laravel/framework": "~5.8|^6.0|^7.0",
+        "laravel/framework": "^8.0",
         "spatie/eloquent-sortable": "^3.5|^3.8"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0",
-        "orchestra/testbench": "~3.8.0|^4.0"
+        "orchestra/testbench": "^6.2",
+        "phpunit/phpunit": "^9.3"
     },
     "autoload": {
         "psr-4": {
