--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": "^7.2|^8.0",
         "laravel/framework": "^8.0",
         "spatie/eloquent-sortable": "^3.5|^3.8"
     },
