--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^7.2|^8.0",
-        "laravel/framework": "^8.0",
+        "laravel/framework": "^8.0|^9.0",
         "spatie/eloquent-sortable": "^3.5|^3.8"
     },
     "require-dev": {
