--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": "^7.2|^8.0",
         "laravel/framework": "^8.0|^9.0",
-        "spatie/eloquent-sortable": "^3.5|^3.8"
+        "spatie/eloquent-sortable": "^4.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6.2",
